# SchemaSorter

./: LICENSE  README.md  pyproject.toml
schemasorter/: __init__.py  engine.py
