[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schemasorter"
version = "0.1.0"
description = "Sort SQL table definitions topologically based on foreign key dependencies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["sqlparse~=0.5.2"]

[project.urls]
Home = "https://github.com/siddarta-weis/SchemaSorter"
Source = "https://github.com/siddarta-weis/SchemaSorter"
Tracker = "https://github.com/siddarta-weis/SchemaSorter/issues"

[dependency-groups]
dev = ["ipdb>=0.13.13", "ipykernel>=6.29.5"]
